@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2000-2016   The R Core Team.
+ *  Copyright (C) 2000-2017   The R Core Team.
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -605,6 +605,13 @@ static SEXP in_do_download(SEXP args)
         {
             //	    if(!quiet) REprintf(_("opened URL\n"), url);
             guess = total = ((inetconn *)ctxt)->length;
+
+            if (total == -999)
+            { // https redirection
+                fclose(out);
+                status = 2;
+                return ScalarInteger(status);
+            }
 #ifdef Win32
             if (R_Interactive)
             {
@@ -859,7 +866,10 @@ void *in_R_HTTPOpen(const char *url, const char *headers, const int cacheOK)
 
     RxmlNanoHTTPTimeout(timeout);
     ctxt = RxmlNanoHTTPOpen(url, NULL, headers, cacheOK);
-    if (ctxt != NULL)
+    if (ctxt == NULL)
+        return NULL;
+    len = RxmlNanoHTTPContentLength(ctxt);
+    if (len != -999)
     {
         int rc = RxmlNanoHTTPReturnCode(ctxt);
         if (rc != 200)
@@ -890,8 +900,6 @@ void *in_R_HTTPOpen(const char *url, const char *headers, const int cacheOK)
             }
         }
     }
-    else
-        return NULL;
     con = (inetconn *)malloc(sizeof(inetconn));
     if (con)
     {
