@@ -336,6 +336,11 @@
       \item Loading the \pkg{parallel} package namespace no longer sets
       or changes the \code{.Random.seed}, even if \env{R_PARALLEL_PORT}
       is unset.
+      
+      \item (Unix-alike)
+      For \samp{http://} URLs and the default method (\code{"auto"}),
+      \code{download.file()} switches to \code{method = "libcurl"} if a
+      redirection to a \samp{https://} URL is encountered.
     }
   }
 
